docs: TIL 2026-04-09 세션 전체 기록 추가
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>